{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 57,
  "lineage": "66d5d3d0-0ffc-71ac-7c99-261526c257e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:381492111475:loadbalancer/net/example/9158c1e2ddb3c562",
            "arn_suffix": "net/example/9158c1e2ddb3c562",
            "dns_name": "example-9158c1e2ddb3c562.elb.ap-northeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:381492111475:loadbalancer/net/example/9158c1e2ddb3c562",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "example",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079986f963b0018cc"
              },
              {
                "subnet_id": "subnet-0d782ddc88fa127c5"
              }
            ],
            "subnets": [
              "subnet-079986f963b0018cc",
              "subnet-0d782ddc88fa127c5"
            ],
            "vpc_id": "vpc-0575af7c272ca3a71",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:381492111475:listener/net/example/9158c1e2ddb3c562/ee386491c4df0a33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:381492111475:targetgroup/example/2c3a59910449b83b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:381492111475:listener/net/example/9158c1e2ddb3c562/ee386491c4df0a33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:381492111475:loadbalancer/net/example/9158c1e2ddb3c562",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_lb_target_group.example",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:381492111475:targetgroup/example/2c3a59910449b83b",
            "arn_suffix": "targetgroup/example/2c3a59910449b83b",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "9080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:381492111475:targetgroup/example/2c3a59910449b83b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "dependencies": [
            "aws_lb.example",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:security-group/sg-0542affa0b3a16cc0",
            "description": "nginx security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0542affa0b3a16cc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "description": "all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "examplenginx-sg",
            "name_prefix": "",
            "owner_id": "381492111475",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:network-acl/acl-09af0918164b1f20d",
            "default_network_acl_id": "acl-09af0918164b1f20d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09af0918164b1f20d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "381492111475",
            "subnet_ids": [
              "subnet-010929fc30cbb9eb0",
              "subnet-079986f963b0018cc",
              "subnet-0b61d693257551b7c",
              "subnet-0d782ddc88fa127c5"
            ],
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:route-table/rtb-0cbdaeff6e5aa1be1",
            "default_route_table_id": "rtb-0cbdaeff6e5aa1be1",
            "id": "rtb-0cbdaeff6e5aa1be1",
            "owner_id": "381492111475",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:security-group/sg-0338e3b3832ab0f07",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0338e3b3832ab0f07",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "381492111475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a604ddc3aca9b73",
            "domain": "vpc",
            "id": "eipalloc-01a604ddc3aca9b73",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-176-187-26.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.176.187.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc13e61b0a1a9162",
            "domain": "vpc",
            "id": "eipalloc-0cc13e61b0a1a9162",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-57-181-16-124.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.181.16.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:internet-gateway/igw-01fbb77cf19a901b1",
            "id": "igw-01fbb77cf19a901b1",
            "owner_id": "381492111475",
            "tags": {
              "Name": "example",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a604ddc3aca9b73",
            "association_id": "eipassoc-0e607b42687462859",
            "connectivity_type": "public",
            "id": "nat-0f1e9bd72d5f90d9c",
            "network_interface_id": "eni-09d570ad4fd507e40",
            "private_ip": "10.30.101.233",
            "public_ip": "18.176.187.26",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079986f963b0018cc",
            "tags": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc13e61b0a1a9162",
            "association_id": "eipassoc-067e5dbc0dee5def6",
            "connectivity_type": "public",
            "id": "nat-0e08b96e8fb1f1904",
            "network_interface_id": "eni-0cd8925be86d46111",
            "private_ip": "10.30.102.190",
            "public_ip": "57.181.16.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d782ddc88fa127c5",
            "tags": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-ap-northeast-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-052d60868248c77ed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f1e9bd72d5f90d9c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052d60868248c77ed",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004b20c1ea2785ec61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e08b96e8fb1f1904",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004b20c1ea2785ec6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01fbb77cf19a901b1",
            "id": "r-rtb-0f2f06d54a26fa17f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2f06d54a26fa17f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:route-table/rtb-052d60868248c77ed",
            "id": "rtb-052d60868248c77ed",
            "owner_id": "381492111475",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:route-table/rtb-004b20c1ea2785ec6",
            "id": "rtb-004b20c1ea2785ec6",
            "owner_id": "381492111475",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:route-table/rtb-0f2f06d54a26fa17f",
            "id": "rtb-0f2f06d54a26fa17f",
            "owner_id": "381492111475",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa2642f5b947268e",
            "route_table_id": "rtb-052d60868248c77ed",
            "subnet_id": "subnet-0b61d693257551b7c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c038cc03f5bfb44f",
            "route_table_id": "rtb-004b20c1ea2785ec6",
            "subnet_id": "subnet-010929fc30cbb9eb0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0634e83a50eb19b56",
            "route_table_id": "rtb-0f2f06d54a26fa17f",
            "subnet_id": "subnet-079986f963b0018cc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fabd56c4cbe5d21",
            "route_table_id": "rtb-0f2f06d54a26fa17f",
            "subnet_id": "subnet-0d782ddc88fa127c5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:subnet/subnet-0b61d693257551b7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b61d693257551b7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492111475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:subnet/subnet-010929fc30cbb9eb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010929fc30cbb9eb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492111475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-private-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:subnet/subnet-079986f963b0018cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079986f963b0018cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492111475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public-ap-northeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:subnet/subnet-0d782ddc88fa127c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d782ddc88fa127c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492111475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-public-ap-northeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example-public-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0575af7c272ca3a71"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:381492111475:vpc/vpc-0575af7c272ca3a71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-09af0918164b1f20d",
            "default_route_table_id": "rtb-0cbdaeff6e5aa1be1",
            "default_security_group_id": "sg-0338e3b3832ab0f07",
            "dhcp_options_id": "dopt-00b4c9ca8c250875e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0575af7c272ca3a71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cbdaeff6e5aa1be1",
            "owner_id": "381492111475",
            "tags": {
              "Name": "example",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "example",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}